// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Home/CommonTable should match snapshot 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col />
                  <col
                    style="width: 30%;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      projectManage.projectForm.projectName
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.createTime
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/order/1"
                      >
                        test1
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/overview"
                      >
                        default
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                        style="max-width: 600px;"
                      >
                        desc1
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render custom custom when custom has a value 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      subject
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      workflow_id
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      test1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      desc1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      test1
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render error info when error has a value 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-bordered ant-table-empty ant-table-scroll-horizontal"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x: auto; overflow-y: hidden;"
          >
            <table
              style="min-width: 100%; table-layout: auto;"
            >
              <colgroup>
                <col />
                <col />
                <col
                  style="width: 30%;"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell"
                  >
                    order.order.name
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    projectManage.projectForm.projectName
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    order.order.desc
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    order.order.createTime
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height: 0px; font-size: 0px;"
                >
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                       
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-table-placeholder"
                >
                  <td
                    class="ant-table-cell"
                    colspan="4"
                  >
                    <div
                      class="ant-table-expanded-row-fixed"
                      style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render spin when loading equal true 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col />
                  <col
                    style="width: 30%;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      projectManage.projectForm.projectName
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.createTime
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/order/1"
                      >
                        test1
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/overview"
                      >
                        default
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                        style="max-width: 600px;"
                      >
                        desc1
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/genTabPaneTitle should be rendered badge count when badgeCount is not zero or has been defined 1`] = `
<Badge
  className="tabs-panel-badge"
  count={88}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;

exports[`test Home/genTabPaneTitle should match snapshot 1`] = `"title"`;

exports[`test Home/genTabPaneTitle should match snapshot 2`] = `
<Badge
  className="tabs-panel-badge"
  count={12}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;

exports[`test Home/genTabPaneTitle should match snapshot 3`] = `
<Badge
  className="tabs-panel-badge"
  count={101}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;
